# bank_study_case

./: Cargo.toml  Readme.md  start_database.sh
migrations/: 20241210002442_create_account.sql  20241210002450_transaction.sql
src/: main.rs
src/internal/: error.rs  mod.rs  test_util.rs  transaction.rs
src/internal/account/: account.rs  domain.rs  error.rs  mod.rs
src/internal/config/: database.rs
src/internal/transaction/: domain.rs  error.rs  mod.rs  transaction.rs
