[package]
name = "bank_case"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
bigdecimal = { version = "0.4.6", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "bigdecimal",
    "uuid"
] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "std", "v7"] }
